@@ -207,7 +207,6 @@ GEL stands for Genius Extension Language. It is the language you use to write pr
   <chapter id="genius-gel-operators">
     <title>Operators in GEL</title>
 
-    &gel-absolute-value-modulus;
     &gel-separator;
     &gel-operator-list;
 
@@ -217,6 +216,7 @@ GEL stands for Genius Extension Language. It is the language you use to write pr
   <chapter id="genius-gel-programming">
     <title>Programming with GEL</title>
 
+    &gel-absolute-value-modulus;
     &gel-conditionals;
     &gel-loops;
     &gel-sums-products;
