@@ -1,3 +1,10 @@
+Tue Dec 21 18:53:54 2004  George Lebl <jirka@5z.com>
+
+	* help/C/gel-operator-list.xml: make the list of operators an
+	  actual list
+
+	* help/C/gel-separator.xml,genius.xml: reorganize a tiny bit
+
 Tue Dec 21 18:13:52 2004  George Lebl <jirka@5z.com>
 
 	* configure.in, Makefile.am, src/gnome-genius.c, help/*:
